# rayTracer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  aabb.h  all_you_need.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  interval.h  main.cc  material.h  ray.h  sphere.h  vec3.h
src/: main.cc
src/acceleration/: aabb.h  bvh.h
src/common/: all_you_need.h  stats.h
src/core/: camera.h  color.h  ray.h
src/geometry/: hittable.h  hittable_list.h  sphere.h
src/material/: material.h
src/math/: interval.h
